--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <hr>
 <h2>Mis proyectos destacados</h2>
 <p>Aqui hay algunos de mis proyectos:</p>
-<a href="Proyectos">Ir a la sección de Proyectos</a>
+<a href="#Proyectos">Ir a la sección de Proyectos</a> <br>
 
 <a href="https://github.com/EvancioXD">Mi perfil de GitHub</a> <br>
 <hr>
